# airport-service-api

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  docker-compose.yml  entrypoint.sh  pyproject.toml  rabbitmq.conf  requirements.txt
app/airport/: admin.py  models.py  paginations.py  permissions.py  serializers.py  tasks.py  ticket_token.py  urls.py  views.py
app/airport/migrations/: 0001_initial.py  0002_flight.py  0003_order_ticket.py  0004_order_uuid.py  0005_ticket_passenger_email_ticket_passenger_name.py  0006_alter_airplane_options_alter_airplanetype_options_and_more.py
app/airport/tests/: helpers.py  test_airplane_api.py  test_airport_api.py  test_crew_api.py  test_flight_api.py  test_order_api.py  test_route_api.py  test_ticket_token.py  test_validate_ticket_view.py
app/core/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/templates/emails/: ticket_confirmation.html  ticket_pdf.html  verify_account.html
app/user/: admin.py  models.py  serializers.py  tasks.py  urls.py  verification_token.py  views.py
app/user/migrations/: 0001_initial.py
app/user/oauth/: base.py  github.py  google.py
app/user/tests/: helpers.py  test_tokens.py  test_user_api.py  test_verification.py
